# the_youtuber_Andreas_Reinholdsson_DE24

./: .gitignore  README.md  function_app.py  host.json  ingestion.py  pyproject.toml
backend/: constants.py  data_models.py  rag.py
frontend/: app.py
