[project]
name = "the-youtuber-andreas-reinholdsson-de24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb]>=1.18.2",
    "duckdb>=1.4.2",
    "fastapi>=0.122.0",
    "google-genai>=1.51.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "lancedb>=0.25.3",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.23.0",
    "pypdf>=6.4.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
